Add support for java 14 language features (#365)
Add support for java 14 language features