@@ -8,7 +8,6 @@ description = 'Palantir Java Format'
 dependencies {
     api project(':palantir-java-format-spi')
     api 'com.google.guava:guava'
-    implementation 'com.google.errorprone:javac-shaded'
     implementation 'org.functionaljava:functionaljava'
     implementation 'com.fasterxml.jackson.core:jackson-databind' // purely for the debugger
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
@@ -32,6 +31,30 @@ dependencies {
 
 tasks.withType(JavaCompile).configureEach {
     options.errorprone.disable 'StrictUnusedVariable'
+
+    options.compilerArgs += [
+        // Allow access to internal javac apis
+        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+    ]
+
+    if (JavaVersion.current() < JavaVersion.VERSION_14) {
+        excludes = ['**/Java14InputAstVisitor.java']
+    }
+}
+
+tasks.withType(Javadoc).configureEach {
+    // Allow access to internal javac apis
+    options.optionFiles << file('../gradle/javadoc.options')
+
+    if (JavaVersion.current() < JavaVersion.VERSION_14) {
+        exclude '**/Java14InputAstVisitor.java'
+    }
 }
 
 // false positives due to org.junit.runners.* in the test cases
@@ -41,4 +64,9 @@ tasks.test {
     // Run all classes and tests in parallel
     // https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution
     systemProperty 'junit.jupiter.execution.parallel.mode.default', 'concurrent'
+}
+
+// necessary to compile Java14InputAstVisitor
+idea {
+    module.languageLevel = new org.gradle.plugins.ide.idea.model.IdeaLanguageLevel(14)
 }
